--- a/resume.html
+++ b/resume.html
@@ -95,7 +95,7 @@
             </section>
             
             <div class="resume-download">
-                <a href="resume.pdf" download="navateja.pdf">
+                <a href="resume (2).pdf" download="navateja.pdf">
                     <button class="download-button">Download My Resume</button>
                 </a>
             </div>
